<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/lblNo1"
        android:layout_width="117dp"
        android:layout_height="28dp"
        android:layout_marginTop="92dp"
        android:text="@string/lblNo1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblNo2"
        android:layout_width="117dp"
        android:layout_height="28dp"
        android:layout_marginTop="64dp"
        android:text="@string/lblNo2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNo1" />

    <EditText
        android:id="@+id/editNo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNo2" />

    <EditText
        android:id="@+id/editNo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNo1" />


    <TextView
        android:id="@+id/results"
        android:layout_width="193dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNo2" />

    <Button
        android:id="@+id/btnSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="sum"
        android:text="@string/btnSum"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnMulti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results" />

    <Button
        android:id="@+id/btnMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="minus"
        android:text="@string/btnMin"
        app:backgroundTint="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnSum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMulti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="multiply"
        android:text="@string/btnMulti"
        app:backgroundTint="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnDivide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="divide"
        android:text="@string/btnDivide"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMin" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:onClick="clear"
        android:text="@string/btnClear"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMulti" />

</androidx.constraintlayout.widget.ConstraintLayout>